Remove some dependencies and fix a little visibility issue

--- a/www/page.css
+++ b/www/page.css
@@ -40,6 +40,7 @@
 }
 
 .page-title {
+    padding-top: 1em;
     width: 100%;
     text-align: center;
 }
